@@ -5,6 +5,8 @@ package dev.vortex.spark;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
@@ -15,21 +17,27 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.apache.spark.sql.*;
+import org.apache.spark.sql.Dataset;
+import org.apache.spark.sql.Row;
+import org.apache.spark.sql.RowFactory;
+import org.apache.spark.sql.SaveMode;
+import org.apache.spark.sql.SparkSession;
 import org.apache.spark.sql.types.DataTypes;
 import org.apache.spark.sql.types.StructField;
 import org.apache.spark.sql.types.StructType;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.io.TempDir;
 
 /**
  * Integration test for Vortex DataSource write and read functionality.
- * <p>
- * This test verifies that:
- * 1. Spark DataFrames can be written as Vortex files
- * 2. Multiple partitions create multiple files
- * 3. Data can be read back correctly
- * 4. Schema is preserved during write/read
+ *
+ * <p>This test verifies that: 1. Spark DataFrames can be written as Vortex files 2. Multiple partitions create multiple
+ * files 3. Data can be read back correctly 4. Schema is preserved during write/read
  */
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public final class VortexDataSourceWriteTest {
@@ -45,6 +53,7 @@ public final class VortexDataSourceWriteTest {
         spark = SparkSession.builder()
                 .appName("VortexWriteTest")
                 .master("local[2]") // Use 2 threads
+                .config("spark.driver.host", "127.0.0.1")
                 .config("spark.sql.shuffle.partitions", "2")
                 .config("spark.sql.adaptive.enabled", "false") // Disable AQE for predictable partitioning
                 .config("spark.ui.enabled", "false") // Disable UI for tests
@@ -213,8 +222,8 @@ public final class VortexDataSourceWriteTest {
         // Verify vortex files inside partition directories
         List<Path> filesA = findVortexFiles(outputPath.resolve("group=A"));
         List<Path> filesB = findVortexFiles(outputPath.resolve("group=B"));
-        assertTrue(!filesA.isEmpty(), "Partition A should have vortex files");
-        assertTrue(!filesB.isEmpty(), "Partition B should have vortex files");
+        assertFalse(filesA.isEmpty(), "Partition A should have vortex files");
+        assertFalse(filesB.isEmpty(), "Partition B should have vortex files");
 
         // When: read back
         Dataset<Row> readDf = spark.read()
@@ -333,15 +342,15 @@ public final class VortexDataSourceWriteTest {
                         "cast(id as int) as id",
                         "CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END AS event_date",
                         """
-                        CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
-                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END AS event_ts""",
+                                CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
+                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END AS event_ts""",
                         """
-                        named_struct(
-                            'event_date', CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END,
-                            'event_ts', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
-                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END,
-                            'label', CASE WHEN id = 0 THEN 'alpha' ELSE 'beta' END
-                        ) AS payload""");
+                                named_struct(
+                                    'event_date', CASE WHEN id = 0 THEN CAST('2024-01-02' AS DATE) ELSE CAST('2024-02-03' AS DATE) END,
+                                    'event_ts', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP)
+                                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP) END,
+                                    'label', CASE WHEN id = 0 THEN 'alpha' ELSE 'beta' END
+                                ) AS payload""");
 
         Path outputPath = tempDir.resolve("temporal_struct_output");
         originalDf
@@ -366,7 +375,7 @@ public final class VortexDataSourceWriteTest {
 
         assertEquals(DataTypes.DateType, readDf.schema().fields()[1].dataType());
         assertEquals(DataTypes.TimestampType, readDf.schema().fields()[2].dataType());
-        assertTrue(readDf.schema().fields()[3].dataType() instanceof StructType);
+        assertInstanceOf(StructType.class, readDf.schema().fields()[3].dataType());
         assertEquals(expectedRows, projectTemporalAndStructRows(readDf));
     }
 
@@ -374,12 +383,12 @@ public final class VortexDataSourceWriteTest {
     @DisplayName("Write TimestampNTZ columns and nested structs")
     public void testWriteTimestampNtzColumns() throws IOException {
         Dataset<Row> timestampNtzDf = spark.range(0, 2).selectExpr("cast(id as int) as id", """
-                        CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
-                        ELSE CAST(NULL AS TIMESTAMP_NTZ) END AS event_ntz""", """
-                        named_struct(
-                            'event_ntz', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
-                                ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP_NTZ) END
-                        ) AS payload""");
+                CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
+                ELSE CAST(NULL AS TIMESTAMP_NTZ) END AS event_ntz""", """
+                named_struct(
+                    'event_ntz', CASE WHEN id = 0 THEN CAST('2024-01-02 03:04:05.123456' AS TIMESTAMP_NTZ)
+                        ELSE CAST('2024-02-03 04:05:06.654321' AS TIMESTAMP_NTZ) END
+                ) AS payload""");
 
         Path outputPath = tempDir.resolve("timestamp_ntz_output");
         assertDoesNotThrow(() -> timestampNtzDf
@@ -389,13 +398,10 @@ public final class VortexDataSourceWriteTest {
                 .mode(SaveMode.Overwrite)
                 .save());
 
-        assertTrue(!findVortexFiles(outputPath).isEmpty(), "TimestampNTZ write should create Vortex files");
+        assertFalse(findVortexFiles(outputPath).isEmpty(), "TimestampNTZ write should create Vortex files");
     }
 
-    /**
-     * Creates a test DataFrame with monotonically increasing integers
-     * and their string representations.
-     */
+    /** Creates a test DataFrame with monotonically increasing integers and their string representations. */
     private Dataset<Row> createTestDataFrame(int numRows) {
         // Create DataFrame with monotonically increasing integers
         return spark.range(0, numRows)
@@ -419,12 +425,10 @@ public final class VortexDataSourceWriteTest {
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Finds all Vortex files in the given directory.
-     */
+    /** Finds all Vortex files in the given directory. */
     private List<Path> findVortexFiles(Path directory) throws IOException {
         if (!Files.exists(directory)) {
-            return Arrays.asList();
+            return List.of();
         }
 
         try (Stream<Path> paths = Files.walk(directory)) {
@@ -435,9 +439,7 @@ public final class VortexDataSourceWriteTest {
         }
     }
 
-    /**
-     * Verifies that two schemas are equal.
-     */
+    /** Verifies that two schemas are equal. */
     private void assertSchemaEquals(StructType expected, StructType actual) {
         assertEquals(expected.fields().length, actual.fields().length, "Schemas should have same number of fields");
 
@@ -457,9 +459,7 @@ public final class VortexDataSourceWriteTest {
         }
     }
 
-    /**
-     * Verifies that the data content of two DataFrames is identical.
-     */
+    /** Verifies that the data content of two DataFrames is identical. */
     private void verifyDataContent(Dataset<Row> expected, Dataset<Row> actual) {
         // Sort both DataFrames by id to ensure consistent ordering
         Dataset<Row> expectedSorted = expected.orderBy("id");
